kustomize-dir/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculator-web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calculator-app
  template:
    metadata:
      labels:
        app: calculator-app
    spec:
      containers:
      - name: app
        image: bazeemme/my-demo-project-repo:128

        ports:
        - containerPort: 8080

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "500m"
            memory: "512Mi"
