kustomize-dir/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculator-service
spec:
  selector:
    app: calculator-app
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
