kustomize-dir/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-project-ingress

spec:
  rules:
  - host: demo.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: calculator-service
            port:
              number: 80
